--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
   height: 992px;
   top: 71px;
   left: 76px;
-  background-image: url(./img/image-here.png);
+  background-image: url(https://c.animaapp.com/Qqmiq0ql/img/image-here.png);
   background-size: 100% 100%;
 }
 
@@ -109,6 +109,7 @@
   top: 710px;
   left: 391px;
 }
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
